--- a/public/receiver.html
+++ b/public/receiver.html
@@ -1,35 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X-share</title>
+    <title>Receiver</title>
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <h1>Receiver</h1>
-    <video id="viewer" width="100%" autoplay></video>
+    <h1>Screen Share</h1>
+    <h2>Receiver</h2>
+    <video id="viewer" autoplay muted playsinline></video>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
       const socket = io();
-      let pc = new RTCPeerConnection();
-      pc.ontrack = e => {
-        document.getElementById("viewer").srcObject = e.streams[0];
-      };
+      socket.emit("join", "receiver");
 
-      pc.onicecandidate = e => {
-        console.log('iced');
-        if(e.candidate) socket.emit("ice", e.candidate);
-      };
+      let pc;
+
+      function createPeer() {
+        pc = new RTCPeerConnection({
+          iceServers: [{ urls: "stun:stun.l.google.com:19302" }]
+        });
+
+        pc.ontrack = e => {
+          viewer.srcObject = e.streams[0];
+          viewer.play().catch(() => {
+            console.log("Autoplay blocked until user interaction");
+          });
+        };
+
+        pc.onicecandidate = e => {
+          if (e.candidate) socket.emit("ice", e.candidate);
+        };
+
+        socket.on("ice", c => pc.addIceCandidate(c));
+      }
+
+      createPeer();
 
       socket.on("offer", async offer => {
+        pc?.close();
+        createPeer();
+
         await pc.setRemoteDescription(offer);
         const answer = await pc.createAnswer();
         await pc.setLocalDescription(answer);
         socket.emit("answer", answer);
       });
-
-      socket.on("ice", candidate => pc.addIceCandidate(candidate));
     </script>
   </body>
 </html>
