--- a/public/sender.html
+++ b/public/sender.html
@@ -3,43 +3,56 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X-share</title>
+    <title>Sender</title>
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <h1>Sender</h1>
-    <p><button id="shareBtn">Share screen</button></p >
-    <video id="preview" autoplay></video>
+    <h1>Screen Share</h1>
+    <h2>Sender</h2>
+    <p><button id="share">Share Screen</button></p>
+    <video id="preview" autoplay muted></video>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      const socket = io();
-      let pc = new RTCPeerConnection();
+    const socket = io();
+    socket.emit("join", "sender");
+
+    let pc;
+    let stream;
+
+    function createPeer() {
+      pc = new RTCPeerConnection({
+        iceServers: [{ urls: "stun:stun.l.google.com:19302" }]
+      });
+
       pc.onicecandidate = e => {
-        if(e.candidate) socket.emit("ice", e.candidate);
+        if (e.candidate) socket.emit("ice", e.candidate);
       };
 
-      socket.on("answer", async answer => {
-        await pc.setRemoteDescription(answer);
-      })
+      socket.on("ice", c => pc.addIceCandidate(c));
+      socket.on("answer", a => pc.setRemoteDescription(a));
+    }
 
-      socket.on("ice", candidate => pc.addIceCandidate(candidate));
+    async function makeOffer() {
+      pc?.close();
+      createPeer();
 
-      document.getElementById("shareBtn").onclick = async() => {
-        const stream = await navigator.mediaDevices.getDisplayMedia({
-          video: true,
-          audio: false
-        });
+      stream.getTracks().forEach(t => pc.addTrack(t, stream));
 
-        document.getElementById("preview").srcObject = stream;
-        stream.getTracks().forEach(track => pc.addTrack(track, stream));
-        const offer = await pc.createOffer();
-        await pc.setLocalDescription(offer);
-        
-        socket.emit("offer", offer);
-      };
+      const offer = await pc.createOffer();
+      await pc.setLocalDescription(offer);
+      socket.emit("offer", offer);
+    }
 
-      // socket.emit("join", "sender");
+    document.getElementById("share").onclick = async () => {
+      stream = await navigator.mediaDevices.getDisplayMedia({ video: true });
+      preview.srcObject = stream;
+      makeOffer();
+    };
+
+    socket.on("receiver-ready", () => {
+      if (stream) makeOffer();
+    });
     </script>
   </body>
 </html>
