--- a/public/receiver.html
+++ b/public/receiver.html
@@ -5,11 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receiver</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="css/style.css" id="main-style-link" >
+    <link rel="stylesheet" href="css/style-preset.css" >
+    <link rel="stylesheet" href="css/all.css" >
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
   </head>
   <body>
-    <h1>Screen Share</h1>
-    <h2>Receiver</h2>
-    <video id="viewer" autoplay muted playsinline></video>
+    <nav class="pc-sidebar">
+      <div class="navbar-wrapper">
+        <div class="m-header">
+          <h3 class="b-brand pt-2">X-Share</h3>
+        </div>
+        <div class="navbar-content">
+          <ul class="pc-navbar">
+            <li class="pc-item">
+              <p class="p-3">
+                <!-- <span class="pc-mtext f-18">Close Screen<button id="close" class="btn btn-action">❌</button></span> -->
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <header class="pc-header">
+      <div class="header-wrapper">
+        <div class="me-auto pc-mob-drp">
+          <ul class="list-unstyled">
+            <li class="pc-h-item pc-sidebar-collapse">
+              <a href="#" class="pc-head-link ms-0" id="sidebar-hide">
+                <i class="fa fa-bars"></i>
+              </a>
+            </li>
+            <li class="pc-h-item pc-sidebar-popup">
+              <a href="#" class="pc-head-link ms-0" id="mobile-collapse">
+                <i class="fa fa-bars"></i>
+              </a>
+            </li>
+            <li class="pc-h-item">
+              <a class="f-22 ms-5" id="">
+                Screen Share | Receiver
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <div class="pc-container">
+      <div class="pc-content">
+        <video id="viewer" class="bg-white" autoplay muted playsinline></video>
+      </div>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -49,5 +94,10 @@
         socket.emit("answer", answer);
       });
     </script>
+    <script src="js/simplebar.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/pcoded.js"></script>
+    <script src="js/feather.min.js"></script>
+    <script src="js/all.js"></script>
   </body>
 </html>
